# whirlpool-inspection-tool

./: .gitleaks.toml  .pre-commit-config.yaml  Jenkinsfile  README.md
api/: .cursorignore  .gitignore  README.md  alembic.ini  connect-jumpserver.sh  credentials.example.json  deploy-sites.example.json  deploy.py  deps.py  env.example  main.py  prepare-dist.sh  pyproject.toml  release.json  requirements.txt  restart.sh  sync_local_to_s3.py
api/deploy/: install-services.sh  whirlpool-api-celery.service  whirlpool-api-fastapi.service  whirlpool-api-flower.service
api/docs/: RULES.md
api/docs/features/: api-fix.md  async-tasks.md  frontend-server-health.md  notification.md  vpn-provision.md
api/docs/schema-deltas/: ip_address_metadata.md  tasks.md  user_sessions.md  user_vpn_profile.md
api/migrations/: env.py
api/migrations/versions/: 01746e536cd5_updated_user_with_vpn_devices_mapping.py  039d26aad928_initial_schema.py  04899d035bcf_updated_attribute_to_side_images.py  1423fee6d824_add_plants_and_warehouse_location_.py  19a78f975b5c_updated_forgot_password_requests.py  2186fd42b9ca_added_tasks.py  2f0d56523fea_push_notifications_setup.py  351589d6f873_added_inspection_status.py  37c06d7f8a88_added_ip_metadata_for_login_audit.py  3c3d9b849c37_added_forgot_password_requests.py  4496bcaea0f4_added_job_logs.py  4f12221eae80_added_package_images_and_time_taken.py  5f3c1d9e8a11_add_warehouse_code_fk_to_inspections.py  60fd67886e56_update_composite_key_in_product_category.py  62d48e08d679_added_totp_2fa_codes.py  7453d710d8bb_added_barcode_locks.py  75a05c1d5bc5_initial_schema.py  (+15 more)
api/mod/: lifespan.py  model.py  tagmetadata.py
api/sample/: sku.csv  warehouses.csv
api/scripts/: export_openapi.py  generate_jwt_key.py  seed.py  seed_master.py
api/template/: error-no-build.html  error.html  get-started.html
api/tests/: test_auth_rate_limit.py
api/utils/: auth_rate_limit.py  block_sensitive_probe_paths.py  change_password_otp.py  common.py  cors.py  critical_admin_delete.py  db.py  decorator.py  env.py  facility_csv_upsert.py  forgot_password_limit.py  ip_address.py  jwt.py  log.py  media_storage.py  pagination.py  password.py  password_policy.py  password_strength.py  roles.py  security_headers.py  two_factor.py  vpn_access.py
api/vapid_keys/: .gitignore  generate.sh
(+892 files in other folders)
