[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42.0",
    "alembic>=1.18.4",
    "cryptography>=48.0.0",
    "fastapi[standard]>=0.135.1",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.3",
    "py-vapid>=1.9.4",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "pywebpush>=2.3.0",
    "redis>=7.2.1",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
    "celery>=5.6.3",
    "flower>=2.0.1",
    "zxcvbn>=4.5.0",
    "pillow>=12.2.0",
    "httpx>=0.28.1",
    "bcrypt>=5.0.0",
    "kombu>=5.6.2",
]

[tool.deptry]
package_module_name_map = { pyjwt = "jwt", python-dotenv = "dotenv" }

[tool.deptry.per_rule_ignores]
DEP002 = [
    "cryptography",
    "jinja2",
    "passlib",
    "psycopg",
    "py-vapid",
    "pydantic-settings",
    "python-multipart",
    "uvicorn",
    "flower",
    "pillow",
]

[tool.scripts]

dev = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"

db-current = "alembic current"
db-history = "alembic history"
db-heads = "alembic heads"

db-up = "alembic upgrade head"
db-down-1 = "alembic downgrade -1"

db-rev = "alembic revision -m"
db-auto = "alembic revision --autogenerate -m"

seed = "python -m scripts.seed"
